fixed whitespace issue on Home component in App.css

--- a/Pley/src/App.css
+++ b/Pley/src/App.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
-  /* background-color: #424242; */
+  background-color: #fed486;
 }
 
 .title {
